--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "operativa",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "tsx index.ts"
+    "start": "tsx index.ts",
+    "aa": "tsx aa.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/fnicolasmedioli/operativa#readme",
   "description": "",
   "dependencies": {
+    "@viz-js/viz": "^3.11.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   },
